# optional

./: .beman-tidy.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  annotated.html  annotated_dup.js  base_derived_cast_8cpp-example.html  classbeman_1_1optional_1_1bad__optional__access-members.html  classbeman_1_1optional_1_1bad__optional__access.html  classbeman_1_1optional_1_1optional-members.html  classbeman_1_1optional_1_1optional.html  classbeman_1_1optional_1_1optional.js  classbeman_1_1optional_1_1optional_3_01T_01_6_01_4-members.html  classbeman_1_1optional_1_1optional_3_01T_01_6_01_4.html  classbeman_1_1optional_1_1optional_3_01T_01_6_01_4.js  classes.html  concept_checks_8cpp-example.html  conceptbeman_1_1optional_1_1is__derived__from__optional.html  concepts.html  config_8hpp_source.html  dir_14092f438e96dd1e529ef35f16c309d6.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5b73df2beebaf1ef11b120e5dc099891.html  dir_94cf5e36d6dc57d8747f5a546f07158a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e60ca9038bcdfa0392d9003c398f717f.html  examples.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  fwd_8hpp_source.html  hierarchy.html  hierarchy.js  index.html  iterator_8hpp_source.html  (+19 more)
.github/workflows/: ci.yml  ci_tests.yml  codeql.yml  doxygen-gh-pages.yml  ossf-scorecard-analysis.yml  pre-commit-check.yml  pre-commit-update.yml  pre-commit.yml
include/beman/optional/: optional.hpp
include/beman/optional/detail/stl_interfaces/: config.hpp  fwd.hpp  iterator_interface.hpp
infra/: .beman_submodule  README.md
search/: all_2.js  all_4.js  all_6.js  all_8.js  all_b.js  all_c.js  functions_5.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
tests/beman/optional/: optional_range_support.test.cpp
